docs/build/iota-sdk/2.0/docs/how-tos/advanced-transactions/advanced-transaction.mdx
---
title: Advanced Transaction
description: 'How to send an advanced transaction'
image: /img/logo/iota_mark_light.png
tags:
  - how to
  - advanced transaction
  - outputs
  - nodejs
  - python
  - rust
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import TipFaucet from '../../_admonitions/_tip-faucet.md';

If you need more advanced features or unlock conditions in your transaction this guide will show you how to send custom outputs.
You can use the related How-To guides to learn more about crating custom outputs with specific [unlock conditions](../outputs/unlock-conditions.mdx)
and [features](../outputs/features.mdx).

<TipFaucet />

## Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

The following example will:

1. Instantiate a [`Wallet`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Create a [`BasicOutput`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/types/block/output/basic/struct.BasicOutput.html)
   that is [time-locked](/learn/protocols/stardust/core-concepts/output-unlock-conditions#timelock) for one
   hour by calling the [`BasicOutputBuilder()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/types/block/output/basic/struct.BasicOutputBuilder.html)
   function and passing the [`AddressUnlockCondition`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/types/block/output/unlock_condition/struct.AddressUnlockCondition.html) and
   the [`TimelockUnlockCondition`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/types/block/output/unlock_condition/struct.TimelockUnlockCondition.html) in as
   [`unlockConditions`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/types/block/output/unlock_condition/index.html)
   to the `BasicOutputBuilder()` by chaining calls to the
   [`BasicOutputBuilder.add_unlock_condition()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/types/block/output/account/struct.AccountOutputBuilder.html#method.add_unlock_condition)

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/advanced_transactions/advanced_transaction.rs#L49-L54
```

</div>

3. Send the `BasicOutput` created in the previous step by calling the
   [`Account.send_outputs()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.send_outputs) function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/advanced_transactions/advanced_transaction.rs#L56
```

</div>

4. Await for the transaction to be accepted by the network by calling the [`Wallet.wait_for_transaction_acceptance()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.wait_for_transaction_acceptance) function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/advanced_transactions/advanced_transaction.rs#L59-L61
```

</div>

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

The following example will:

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Wallet) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Create a [`BasicOutput`](../../references/nodejs/classes/BasicOutput.md) that is
   [time-locked](/learn/protocols/stardust/core-concepts/output-unlock-conditions#timelock) for one
   hour by calling the [`Client.buildBasicOutput()`](../../references/nodejs/classes/Client.md#buildbasicoutput)
   function and passing the [`AddressUnlockCondition`](../../references/nodejs/classes/AddressUnlockCondition.md) and
   the [`TimelockUnlockCondition`](../../references/nodejs/classes/TimelockUnlockCondition.md) in as
   [`unlockConditions`](../../references/nodejs/classes/UnlockCondition.md) to the `Client`.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/advanced_transactions/advanced_transaction.ts#L48-L57
```

</div>

3. Send the [`Output`](../../references/nodejs/classes/Output.md) created in the previous step by calling the
   [`wallet.sendOutputs()`](../../references/nodejs/classes/Wallet.md#sendoutputs) function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/advanced_transactions/advanced_transaction.ts#L59
```

</div>

4. Await for the [`Transaction`](../../references/nodejs/classes/Transaction.md) to get confirmed by calling the
   [`Wallet.waitForTransactionAcceptance()`](../../references/nodejs/classes/Wallet.md#waitfortransactionacceptance)
   function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/advanced_transactions/advanced_transaction.ts#L63
```

</div>

</TabItem>
<TabItem value="python" label="Python">

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/python/iota_sdk/wallet/) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Create a `BasicOutput` that is
   [time-locked](/learn/protocols/stardust/core-concepts/output-unlock-conditions#timelock) for one
   hour by calling the [`Client.build_basic_output()`](../../references/python/iota_sdk/client/client.md#build_basic_output)
   function and passing the [`AddressUnlockCondition`](../../references/python/iota_sdk/types/unlock_condition.md#addressunlockcondition-objects) and
   the [`TimelockUnlockCondition`](../../references/python/iota_sdk/types/unlock_condition.md#timelockunlockcondition-objects) in as
   [`UnlockConditions`](../../references/python/iota_sdk/types/unlock_condition.md) to the `Client`.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/advanced_transactions/advanced_transaction.py#L33-L46
```

</div>

3. Send the [`Output`](../../references/python/iota_sdk/types/output.md) created in the previous step by calling the
   [`wallet.send_outputs()`](../../references/python/iota_sdk/wallet/wallet.md#send_outputs) function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/advanced_transactions/advanced_transaction.py#L49
```

</div>

4. Await for the transaction to get accepted by calling the [`Wallet.wait_for_transaction_acceptance()`](../../references/python/iota_sdk/wallet/wallet.md#wait_for_transaction_acceptance)
   function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/advanced_transactions/advanced_transaction.py#L51-L52
```

</div>

</TabItem>
</Tabs>

### Full Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/advanced_transactions/advanced_transaction.rs
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/advanced_transactions/advanced_transaction.ts
```

</TabItem>
<TabItem value="python" label="Python">

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/advanced_transactions/advanced_transaction.py
```

</TabItem>
</Tabs>

### Expected Output

```plaintext
Transaction sent: 0x1f9bf3dd9e6c8cae9b23e3f2d4af4039518894b1dc4b605e41aea94fe93c995d
Block sent: https://explorer.shimmer.network/testnet/block/0x14fdeb191112e222e60cd18eecf803797013587b1e7c2f38f5075ba87b3a69b3
```
